Add full text search

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,15 @@ quarkus.datasource.password=quarkus_test
 quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.hibernate-orm.sql-load-script=import-data.sql
 
+quarkus.hibernate-search.elasticsearch.version=7
+quarkus.hibernate-search.elasticsearch.automatic-indexing.synchronization-strategy=searchable
+quarkus.hibernate-search.elasticsearch.index-defaults.lifecycle.strategy=drop-and-create
+quarkus.hibernate-search.elasticsearch.index-defaults.lifecycle.required-status=yellow
+
 %prod.quarkus.hibernate-orm.database.generation=none
 %prod.quarkus.hibernate-orm.sql-load-script=no-file
+%prod.quarkus.hibernate-search.elasticsearch.index-defaults.lifecycle.strategy=none
+%prod.org.acme.hibernate.search.force-reindex=false
+
+quarkus.log.category."org.hibernate.service.internal.AbstractServiceRegistryImpl".level=ERROR
+quarkus.log.category."com.arjuna.ats.arjuna".level=ERROR
